[NEXUS-68] prototype api list orang tua
