# services/kepegawaian/docs/openapi.yaml
@@ -162,6 +162,41 @@ paths:
                           type: string
                         tanggal_lahir:
                           type: string
+  /keluarga/orang-tua:
+    get:
+      tags:
+        - Keluarga
+      summary: Lihat daftar orang tua.
+      description: >-
+        Lihat daftar orang tua dari user yang login.
+      operationId: listOrangTua
+      parameters:
+        - $ref: "#/components/parameters/authRequired"
+      responses:
+        "200":
+          description: Sukses.
+          content:
+            application/json:
+              schema:
+                additionalProperties: false
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      additionalProperties: false
+                      properties:
+                        id:
+                          type: integer
+                        peran:
+                          type: string
+                          enum:
+                            - AYAH
+                            - IBU
+                        nama:
+                          type: string
+                        tanggal_lahir:
+                          type: string
   /kepangkatan:
     get:
       tags:
